[package]
name = "slipstream"
version = "0.1.0"
edition = "2024" # do not touch

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }

aws-config = "1.8"
aws-sdk-bedrockruntime = "1.125"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "stream"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3.6"
